tests/snapshots/options__opt_min_query_length_interactive@001.snap
---
source: tests/options.rs
description: "input: interactive\noptions: -i --min-query-length 3 --cmd printf 'line1\\nline2\\nline3' --info hidden"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"c>                                                                              "
cursor: (25, 4)
