tests/snapshots/options__opt_min_query_length_interactive@002.snap
---
source: tests/options.rs
description: "input: interactive\noptions: -i --min-query-length 3 --cmd printf 'line1\\nline2\\nline3' --info hidden\nafter:\n  @type \"li\""
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"c> li                                                                           "
cursor: (25, 6)
