tests/snapshots/options__opt_min_query_length_interactive@003.snap
---
source: tests/options.rs
description: "input: interactive\noptions: -i --min-query-length 3 --cmd printf 'line1\\nline2\\nline3' --info hidden\nafter:\n  @char 'n'"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  line3                                                                         "
"  line2                                                                         "
"> line1                                                                         "
"c> lin                                                                          "
cursor: (25, 7)
