tests/snapshots/options__opt_multi@003.snap
---
source: tests/options.rs
description: "input: items [\"a\", \"b\", \"c\"]\noptions: --multi\nafter:\n  @shift Tab"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> c                                                                             "
" >b                                                                             "
" >a                                                                             "
"  3/3 [2]                                                                    2/0"
">                                                                               "
cursor: (24, 3)
