tests/snapshots/options__opt_multi_selector-2.snap
---
source: tests/options.rs
expression: buf + & cursor_pos
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  c                                                                             "
"> b                                                                             "
" $a                                                                             "
"  3/3 [1]                                                                    1/0"
">                                                                               "
cursor: (24, 3)
